Fix #4086 misaligned 'required' text on selects

--- a/client/profile-wizard/style.scss
+++ b/client/profile-wizard/style.scss
@@ -356,6 +356,10 @@
 		}
 	}
 
+	.woocommerce-select-control p.components-base-control__help {
+		margin-top: 1em;
+	}
+
 	#wpadminbar {
 		display: none;
 	}
